# canada-valet-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: attribution.md  caching.md  data-sources.md  examples.md  roadmap.md  usage.md
examples/: daily_fx_group.sh  export_to_csv.sh  export_to_json.sh  export_to_parquet.sh  fx_usd_cad.sh
src/canada_valet_cli/: __init__.py  cache.py  cli.py  client.py  config.py  exceptions.py  export.py  formatting.py  models.py  search.py  validation.py
tests/: test_cache.py  test_cli.py  test_client.py  test_export.py  test_search.py  test_validation.py
